# practice

./: README.md  setup.py
dsa/arrays/: README.md  array.c  array.js
dsa/list/: list.c
hackerank/problemsolving/python/: aVeryBigSum.py  birthdaycakecandles.py  compareTriplets.py  diagonaldiff.py  minmaxsum.py  plusminus.py  staircase.py  sumof2ints.py  sumofarray.py
hackerank/python/: fizzbuzz.py  max_pres.py  multiples.py  reverse_swap_cases.py  vending_machine.py
hackerank/python/basic_types/: list_comprehensions.py
languages/python/: map.py
tdd/unittesting/ccpp/: CMakeLists.txt  CMakeSettings.cmake  CMakeTests.cmake
tdd/unittesting/ccpp/include/: Main.hpp
tdd/unittesting/ccpp/src/: Main.cpp
tdd/unittesting/python/: shopping_cart.py  test_shopping_cart.py
